logs/django.log
[ERROR   :            django.request] - 2024-02-02 21:25:37,511 : log_response @ 0241: Internal Server Error: /competitions/all/
Traceback (most recent call last):
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 502, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: '%'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\themis\app_for_competitions\views.py", line 27, in edit_competitions
    return render(request, 'app_for_competitions/edit_competitions.html', context=context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\loader.py", line 62, in render_to_string
    return template.render(context, request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\backends\django.py", line 61, in render
    return self.template.render(context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 171, in render
    return self._render(context)
           ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\test\utils.py", line 111, in instrumented_test_render
    return self.nodelist.render(context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 1000, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 1000, in <listcomp>
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 961, in render_annotated
    return self.render(context)
           ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\loader_tags.py", line 134, in render
    compiled_parent = self.get_parent(context)
                      ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\loader_tags.py", line 131, in get_parent
    return self.find_template(parent, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\loader_tags.py", line 109, in find_template
    template, origin = context.template.engine.find_template(
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 504, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "C:\Users\Александр\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\template\base.py", line 565, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 24: '%'. Did you forget to register or load this tag?
[ERROR   :             django.server] - 2024-02-02 21:25:37,552 : log_message @ 0212: "GET /competitions/all/ HTTP/1.1" 500 203397
[INFO    :             django.server] - 2024-02-02 21:25:37,618 : log_message @ 0212: "GET /static/debug_toolbar/css/print.css HTTP/1.1" 200 43
[INFO    :             django.server] - 2024-02-02 21:25:37,618 : log_message @ 0212: "GET /static/debug_toolbar/css/toolbar.css HTTP/1.1" 200 12621
[INFO    :             django.server] - 2024-02-02 21:25:37,625 : log_message @ 0212: "GET /static/debug_toolbar/js/toolbar.js HTTP/1.1" 200 13404
[INFO    :             django.server] - 2024-02-02 21:25:37,682 : log_message @ 0212: "GET /static/debug_toolbar/js/utils.js HTTP/1.1" 200 4527
[WARNING :            django.request] - 2024-02-02 21:25:37,720 : log_response @ 0241: Not Found: /favicon.ico
[WARNING :             django.server] - 2024-02-02 21:25:37,720 : log_message @ 0212: "GET /favicon.ico HTTP/1.1" 404 13358
[INFO    :             django.server] - 2024-02-02 21:25:47,324 : log_message @ 0212: "GET /competitions/all/ HTTP/1.1" 200 14658
[INFO    :             django.server] - 2024-02-02 21:25:47,347 : log_message @ 0212: "GET /static/css/stylesheet.css HTTP/1.1" 304 0
[INFO    :             django.server] - 2024-02-02 21:25:49,204 : log_message @ 0212: "GET /competitions/competition_result/ HTTP/1.1" 200 11975
[INFO    :             django.server] - 2024-02-02 21:25:51,190 : log_message @ 0212: "GET /competitions/all/ HTTP/1.1" 200 14658
[INFO    :             django.server] - 2024-02-02 21:25:53,093 : log_message @ 0212: "GET /judges/all/ HTTP/1.1" 200 21498
[INFO    :            app_main.views] - 2024-02-02 21:25:57,661 : about @ 0022: Загружена страница обо мне
[INFO    :             django.server] - 2024-02-02 21:25:57,688 : log_message @ 0212: "GET /about/ HTTP/1.1" 200 12001
[INFO    :             django.server] - 2024-02-02 21:26:13,258 : log_message @ 0212: "GET /competitions/competition_result/ HTTP/1.1" 200 11975
[INFO    :             django.server] - 2024-02-02 21:26:14,588 : log_message @ 0212: "GET /competitions/all/ HTTP/1.1" 200 14658
[INFO    :             django.server] - 2024-02-02 21:26:15,393 : log_message @ 0212: "GET /judges/all/ HTTP/1.1" 200 21498
[INFO    :            app_main.views] - 2024-02-02 21:26:16,849 : index @ 0012: Главная страница
[INFO    :             django.server] - 2024-02-02 21:26:16,874 : log_message @ 0212: "GET / HTTP/1.1" 200 12434
[INFO    :            app_main.views] - 2024-02-02 21:26:18,879 : about @ 0022: Загружена страница обо мне
[INFO    :             django.server] - 2024-02-02 21:26:18,919 : log_message @ 0212: "GET /about/ HTTP/1.1" 200 12001
[INFO    :             django.server] - 2024-02-02 21:26:23,715 : log_message @ 0212: "GET /competitions/competition_result/ HTTP/1.1" 200 11975
[INFO    :            app_main.views] - 2024-02-02 21:26:24,661 : index @ 0012: Главная страница
[INFO    :             django.server] - 2024-02-02 21:26:24,684 : log_message @ 0212: "GET / HTTP/1.1" 200 12434
[INFO    :            app_main.views] - 2024-02-02 21:28:28,212 : about @ 0022: Загружена страница обо мне
[INFO    :             django.server] - 2024-02-02 21:28:28,243 : log_message @ 0212: "GET /about/ HTTP/1.1" 200 12006
[INFO    :             django.server] - 2024-02-02 21:28:28,271 : log_message @ 0212: "GET /static/image/app_main/this_is_i.jpeg HTTP/1.1" 200 193152
[INFO    :             django.server] - 2024-02-02 21:28:36,640 : log_message @ 0212: "GET /participants/ HTTP/1.1" 200 11983
[INFO    :             django.server] - 2024-02-02 21:28:38,016 : log_message @ 0212: "GET /judges/all/ HTTP/1.1" 200 21498
[INFO    :             django.server] - 2024-02-02 21:28:38,900 : log_message @ 0212: "GET /competitions/all/ HTTP/1.1" 200 14658
[INFO    :             django.server] - 2024-02-02 21:28:39,501 : log_message @ 0212: "GET /competitions/competition_result/ HTTP/1.1" 200 11975
[INFO    :            app_main.views] - 2024-02-02 21:28:40,903 : about @ 0022: Загружена страница обо мне
[INFO    :             django.server] - 2024-02-02 21:28:40,927 : log_message @ 0212: "GET /about/ HTTP/1.1" 200 12006
[INFO    :             django.server] - 2024-02-02 21:28:57,327 : log_message @ 0212: "GET /participants/ HTTP/1.1" 200 11983
